@@ -1,3 +1,7 @@
+2007-01-08  Nishio Futoshi  <fut_nis@d3.dion.ne.jp>
+
+	* src/specParse.py: addMacro(ipv6)
+
 2007-01-07  Nishio Futoshi  <fut_nis@d3.dion.ne.jp>
 
 	* src/mo_get_srpm_name.py : delete
